--- a/index.html
+++ b/index.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Menu </title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel="stylesheet" >
 </head>
 <body>
-    
+    <nav>
+        <div class="navbar">
+            <div class="logo"><a href="#">嘉应学院调查网站</a></div>
+            <div class="nav-links">
+                <ul class="links">
+                    <li><a href="#">首页</a></li>
+                    <li>
+                        <a href="#">学生</a>
+                        <i class="bx bxs-chevron-down arrow htmlcss-arrow"></i>
+                        <ul class="htmlCss-sub-menu sub-menu">
+                            <li><a href="#">大一</a></li>
+                            <li><a href="#">大二</a></li>
+                            <li><a href="#">大三</a></li>
+                            <li><a href="#">大四</a></li>
+                            <!-- <li class="more">
+                                <a href="#">More</a>
+                                <i class="bx bxs-chevron-right arrow more-arrow"></i>
+                                <ul class="more-sub-menu sub-menu">
+                                    <li><a href="#">Dynamic Calculator</a></li>
+                                    <li><a href="#">Form Validation</a></li>
+                                    <li><a href="#">Calendar</a></li>
+                                    <li><a href="#">Digital Clock</a></li>
+                                </ul>
+                            </li> -->
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">教师</a>
+                        <i class="bx bxs-chevron-down arrow js-arrow"></i>
+                        <ul class="js-sub-menu sub-menu">
+                            <li><a href="#">助教</a></li>
+                            <li><a href="#">讲师</a></li>
+                            <li><a href="#">副教授</a></li>
+                            <li><a href="#">教授</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">免费模板</a></li>
+                    <li><a href="#">样本收集</a></li>
+                </ul>
+            </div>
+            <div class="search-box">
+                <i class='bx bx-search'></i>
+                <div class="input-box">
+                    <input type="text" placeholder="Search...">
+                </div>
+            </div>
+            <ul class="in">
+                <li><a href="#">登录</a></li>
+                <li><a href="#">注册</a></li>
+            </ul>
+        </div>
+    </nav>
+    <!-- <table>
+        <tr>
+            <td>
+                <h1>哈哈哈哈哈哈哈哈哈哈哈</h1>
+            </td>
+        </tr>
+    </table> -->
+    <script src="script.js"></script>
 </body>
 </html>
